--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,108 @@
+body {
+  margin: 0;
+  padding: 0;
+  color: #666;
+  line-height: 1.6;
+}
+
+img {
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+}
+
 .App {
-  font-family: sans-serif;
+  font-family: "Rubik", sans-serif;
   text-align: left;
+  background-color: #f5f6fa;
+}
+
+.app-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 4rem 0;
+}
+
+/* cards */
+
+.card-container {
+  display: grid;
+  grid-template-columns: auto 1fr 1fr auto;
+  grid-template-rows: auto auto auto;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Score User User Actions"
+    "Score Comment Comment Comment"
+    "Replies Replies Replies Replies";
+}
+
+.card-score {
+  grid-area: Score;
+  width: 2.5rem;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 1rem 0 0 1rem;
+}
+
+.card-score-widget {
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  background-color: #f5f6fa;
+  color: #5457b4;
+  text-align: center;
+}
+.card-user {
+  grid-area: User;
+  background-color: white;
+  padding: 1rem;
+}
+
+.card-actions {
+  grid-area: Actions;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 0 1rem 0 0;
+}
+
+.card-comment {
+  grid-area: Comment;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 0 0 1rem 0;
+}
+
+.card-replies {
+  grid-area: Replies;
+  padding-top: 2rem;
+  padding-left: 2rem;
+}
+
+/* new comments */
+
+.new-comment-container {
+  display: flex;
+  gap: 1rem;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+}
+
+.new-comment-form {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  align-items: flex-start;
+}
+
+textarea {
+  border: solid 1px #eee;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 100%;
+  resize: none;
+  font-family: inherit;
+}
+
+textarea:focus-visible {
+  outline: #5457b4 auto 1px;
 }
