--- a/src/styles.css
+++ b/src/styles.css
@@ -23,16 +23,15 @@ img {
   padding: 4rem 0;
 }
 
-/* cards */
+/* comment cards */
 
 .card-container {
   display: grid;
   grid-template-columns: auto 1fr 1fr auto;
-  grid-template-rows: auto auto auto;
-  grid-auto-flow: row;
   grid-template-areas:
     "Score User User Actions"
     "Score Comment Comment Comment"
+    "ReplyForm ReplyForm ReplyForm ReplyForm"
     "Replies Replies Replies Replies";
 }
 
@@ -71,15 +70,21 @@ img {
   border-radius: 0 0 1rem 0;
 }
 
+.card-reply-form {
+  grid-area: ReplyForm;
+  margin-top: 1rem;
+}
+
 .card-replies {
   grid-area: Replies;
   padding-top: 2rem;
   padding-left: 2rem;
 }
 
-/* new comments */
+/* new comments and replies */
 
-.new-comment-container {
+.new-comment-container,
+.new-reply-container {
   display: flex;
   gap: 1rem;
   background-color: white;
@@ -87,7 +92,8 @@ img {
   padding: 1rem;
 }
 
-.new-comment-form {
+.new-comment-form,
+.new-reply-form {
   display: flex;
   gap: 1rem;
   width: 100%;
