--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,28 @@
-body {
+* {
   margin: 0;
   padding: 0;
+}
+
+body {
+  min-height: 100vh;
   color: #666;
+  line-height: 1.6;
+}
+
+h1 {
+  padding-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: 400;
+  text-align: center;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+p {
+  padding-bottom: 1.5rem;
   line-height: 1.6;
 }
 
@@ -9,6 +30,15 @@ img {
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
+}
+
+.button-score {
+  border: none;
+  background-color: #f5f6fa;
+  color: #5457b4;
+  font-size: 120%;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 .button-action {
@@ -37,9 +67,9 @@ img {
 }
 
 .app-container {
-  max-width: 800px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 4rem 0;
+  padding: 2rem;
 }
 
 /* comment cards */
@@ -67,8 +97,14 @@ img {
   padding: 0.5rem;
   background-color: #f5f6fa;
   color: #5457b4;
+  font-weight: 500;
   text-align: center;
 }
+
+.card-score-number {
+  padding: 0.5rem 0;
+}
+
 .card-user {
   grid-area: User;
   background-color: white;
@@ -122,10 +158,11 @@ img {
 textarea {
   border: solid 1px #eee;
   border-radius: 1rem;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   width: 100%;
   resize: none;
   font-family: inherit;
+  font-size: inherit;
 }
 
 textarea:focus-visible {
