--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,9 @@ img {
   background-color: white;
   padding: 1rem;
   border-radius: 0 1rem 0 0;
+  display: flex;
+  gap: 1rem;
+  align-items: flex-start;
 }
 
 .card-comment {
@@ -123,6 +126,8 @@ img {
   background-color: white;
   padding: 1rem;
   border-radius: 0 0 1rem 0;
+  display: flex;
+  justify-content: stretch;
 }
 
 .card-reply-form {
@@ -153,6 +158,14 @@ img {
   gap: 1rem;
   width: 100%;
   align-items: flex-start;
+}
+
+.edit-comment-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  align-items: flex-end;
 }
 
 textarea {
