--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Rubik", sans-serif;
 }
 
 body {
@@ -26,12 +27,6 @@ p {
   line-height: 1.6;
 }
 
-img {
-  border-radius: 50%;
-  width: 3rem;
-  height: 3rem;
-}
-
 .button-score {
   border: none;
   background-color: #f5f6fa;
@@ -44,9 +39,20 @@ img {
 .button-action {
   border: none;
   background-color: white;
-  color: #5457b4;
   font-size: 1rem;
   cursor: pointer;
+}
+
+.button-action-reply {
+  color: #5457b4;
+}
+
+.button-action-delete {
+  color: #ed6368;
+}
+
+.button-action-edit {
+  color: #5457b4;
 }
 
 .button-form {
@@ -61,13 +67,12 @@ img {
 }
 
 .App {
-  font-family: "Rubik", sans-serif;
   text-align: left;
   background-color: #f5f6fa;
 }
 
 .app-container {
-  max-width: 1440px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 2rem;
 }
@@ -107,8 +112,31 @@ img {
 
 .card-user {
   grid-area: User;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
   background-color: white;
   padding: 1rem;
+}
+
+.card-user-you {
+  color: white;
+  background-color: #5457b4;
+  border-radius: 0.125rem;
+  padding: 0.125rem 0.5rem;
+  font-size: 80%;
+}
+
+.card-user-img-user {
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.card-user-img-other {
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
 }
 
 .card-actions {
