--- a/src/styles.css
+++ b/src/styles.css
@@ -279,19 +279,21 @@ p {
 }
 
 textarea {
-  border: solid 1px var(--light-gray);
+  border: solid 0.5px var(--light-gray);
   border-radius: 1rem;
   padding: 1rem 1.5rem;
   width: 100%;
   resize: none;
+  color: var(--dark-blue);
   font-family: inherit;
   font-size: inherit;
-  color: inherit;
   line-height: inherit;
+  caret-color: var(--moderate-blue);
 }
 
+textarea:hover,
 textarea:focus-visible {
-  outline: var(--moderate-blue) auto 1px;
+  outline: var(--moderate-blue) solid 0.5px;
 }
 
 dialog {
