--- a/src/styles.css
+++ b/src/styles.css
@@ -271,9 +271,10 @@ p {
 }
 
 .new-reply-form {
-  display: flex;
-  gap: 1rem;
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  column-gap: 1rem;
   align-items: flex-start;
 }
 
