--- a/src/styles.css
+++ b/src/styles.css
@@ -193,7 +193,6 @@ p {
   gap: 0.5rem;
   align-items: center;
   background-color: var(--white);
-  padding-top: 1.5rem;
 }
 
 .card-user-you {
@@ -223,26 +222,26 @@ p {
 
 .card-actions {
   grid-area: Actions;
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
   background-color: var(--white);
   padding: 1.5rem;
   border-radius: 0 1rem 0 0;
-  display: flex;
-  gap: 1rem;
-  align-items: flex-start;
 }
 
 .card-comment {
   grid-area: Comment;
-  background-color: var(--white);
-  padding-right: 1.5rem;
-  border-radius: 0 0 1rem 0;
   display: flex;
   justify-content: stretch;
+  background-color: var(--white);
+  padding: 0.5rem 1.5rem 0 0;
+  border-radius: 0 0 1rem 0;
 }
 
 .card-reply-form {
   grid-area: ReplyForm;
-  margin-top: 1rem;
+  padding-top: 1rem;
 }
 
 .card-replies {
@@ -279,11 +278,12 @@ p {
 }
 
 .edit-comment-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
   width: 100%;
-  align-items: flex-end;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  column-gap: 1rem;
+  align-items: flex-start;
+  padding-bottom: 1rem;
 }
 
 .form-error {
