--- a/src/styles.css
+++ b/src/styles.css
@@ -119,12 +119,14 @@ p {
 }
 
 .button-form {
+  width: 6.5rem;
   border: none;
   border-radius: 0.5rem;
-  padding: 1rem 2rem;
+  padding: 1rem;
   background-color: var(--moderate-blue);
   color: var(--white);
   font-size: 1rem;
+  line-height: 1;
   text-transform: uppercase;
   cursor: pointer;
 }
