--- a/src/styles.css
+++ b/src/styles.css
@@ -324,8 +324,8 @@ dialog {
 
 dialog h2 {
   font-size: 1.5rem;
-  line-height: 1.75rem;
-  font-weight: 400;
+  line-height: 1;
+  font-weight: 500;
   padding-bottom: 1rem;
   color: var(--dark-blue);
 }
@@ -339,4 +339,25 @@ dialog::backdrop {
   display: flex;
   justify-content: center;
   gap: 1rem;
+}
+
+.button-dialog {
+  width: 100%;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  color: var(--white);
+  font-size: 1rem;
+  line-height: 1;
+  font-weight: 500;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.button-dialog-cancel {
+  background-color: var(--grayish-blue);
+}
+
+.button-dialog-delete {
+  background-color: var(--soft-red);
 }
