--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ p {
 
 .button-score {
   border: none;
-  background-color: var(--very-light-gray);
+  background-color: inherit;
   color: var(--light-grayish-blue);
   font-size: 1.25rem;
   font-weight: 500;
@@ -169,6 +169,19 @@ p {
   padding-bottom: 1.25rem;
 }
 
+@media screen and (max-width: 767px) {
+  .card-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-areas:
+      "User User"
+      "Comment Comment"
+      "Score Actions"
+      "ReplyForm ReplyForm"
+      "Replies Replies";
+  }
+}
+
 .card-replies .card-container:last-child {
   padding-bottom: 0;
 }
@@ -176,22 +189,34 @@ p {
 .card-score {
   grid-area: Score;
   background-color: var(--white);
-  padding: 1.5rem;
   border-radius: 0.5rem 0 0 0.5rem;
+  padding: 1.5rem;
+}
+
+@media screen and (max-width: 767px) {
+  .card-score {
+    border-radius: 0 0 0 0.5rem;
+    padding: 0 0 1rem 1rem;
+  }
 }
 
 .card-score-widget {
-  width: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: fit-content;
   border-radius: 0.625rem;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 1rem;
   background-color: var(--very-light-gray);
   color: var(--moderate-blue);
   font-weight: 500;
   text-align: center;
 }
 
-.card-score-number {
-  padding: 0.5rem 0;
+@media screen and (max-width: 767px) {
+  .card-score-widget {
+    flex-direction: row;
+  }
 }
 
 .card-user {
@@ -200,6 +225,13 @@ p {
   gap: 0.5rem;
   align-items: center;
   background-color: var(--white);
+}
+
+@media screen and (max-width: 767px) {
+  .card-user {
+    padding: 1rem;
+    border-radius: 0.5rem 0.5rem 0 0;
+  }
 }
 
 .card-user-you {
@@ -231,10 +263,18 @@ p {
   grid-area: Actions;
   display: flex;
   align-items: flex-start;
+  justify-content: flex-end;
   gap: 1rem;
   background-color: var(--white);
   padding: 1.5rem;
   border-radius: 0 0.5rem 0 0;
+}
+
+@media screen and (max-width: 767px) {
+  .card-actions {
+    border-radius: 0 0 0.5rem 0;
+    padding-top: 0 1rem 1rem 0;
+  }
 }
 
 .card-comment {
@@ -244,6 +284,13 @@ p {
   background-color: var(--white);
   padding: 0.5rem 1.5rem 0 0;
   border-radius: 0 0 0.5rem 0;
+}
+
+@media screen and (max-width: 767px) {
+  .card-comment {
+    border-radius: 0;
+    padding: 0 1rem;
+  }
 }
 
 .card-reply-form {
